--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
                 <artifactId>regex-parser-core</artifactId>
                 <version>1.0</version>
             </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.10</version>
+                <type>jar</type>
+                <scope>test</scope>
+                <optional>true</optional>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
