--- a/regex-parser-core/pom.xml
+++ b/regex-parser-core/pom.xml
@@ -9,4 +9,11 @@
         <version>1.0</version>
     </parent>
     <artifactId>regex-parser-core</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+    </dependencies>
 </project>
