--- a/regex-parser-client-demo/pom.xml
+++ b/regex-parser-client-demo/pom.xml
@@ -8,7 +8,7 @@
         <artifactId>regex-parser</artifactId>
         <version>1.0</version>
     </parent>
-    <artifactId>regex-parser-client</artifactId>
+    <artifactId>regex-parser-client-demo</artifactId>
 
     <dependencies>
         <dependency>
